# TrialLlama

./: .gitignore  Dockerfile  PATHS.md  README.md  debug.py  docker-compose.yaml  finetuning.py  inference.py  inference_main.py  llama_finetuning.py  llama_testing.py  main.py  pyproject.toml  required_CTs  requirements.txt  run_experiment.py  run_experiments.py  testing.py
.devcontainer/: devcontainer.json
configs/: config.py  config.yaml  ct_data.yaml  datasets.py  eval_config.yaml  experiment.yaml  experiment_definitions.yaml  experiment_definitions_final.yaml  experiment_definitions_promising.yaml  experiments.py  experiments.yaml  fsdp.py  peft.py  test_data.yaml  testing.py  train_data.yaml  training.py
connection-scripts/: connect-container.sh
data/: data_reader.py  example.json  example_eval_file
ft_datasets/: alpaca_dataset.py  ct_dataset.py  instruct_dataset.py  utils.py
inference/: chat_completion.py  chat_utils.py  checkpoint_converter_fsdp_hf.py  inference.py  model_utils.py  safety_utils.py  samsum_prompt.txt  vLLM_inference.py
lit-gpt/: README.md
logs/: 0d7cedak-213_v5_4_0.0001_0.2_ec1e58f40f35427985f3cb463d8608c3.log'  1paawknm-127_v5_4_0.0001_0.1_4e75064bdecd4e51acea835f5b37f64a.log'  28zaanc0-321_v5_4_0.0001_0.1_eefde1a4496a4cabb28670b51afab496.log'  346wablp-869_v5_4_0.0001_0.95_76faa3f80d2246d89ec5437cb044f8c4.log'  3rsce4k6-736_v5_4_0.001_0.2_95bfdb52bc334bb1b2e42a7a21181b23.log'  4dgfsh8l-376_v5_4_0.0001_0.2_977c10cd4c424897b4d303644823145e.log'  7hovie3v-771_v5_4_0.0001_0.2_4184c80cd79d4c2bb3b42649ace10cef.log'  (+60 more)
misc/: ct_few_shot_v1.json  (+8 more)
(+6469 files in other folders)
