[tool.poetry]
name = "masters-thesis"
version = "0.1.0"
description = ""
authors = ["kevinkrs <kraus.kevin@proton.me>"]
readme = "README.md"
packages = [{include = "masters_thesis"}]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.31.0"
pandas = "^2.0.3"
pytorch-lightning = "^2.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
