[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "master-thesis"
version = "0.0.1"
authors = [
  { name="Kevin Kraus", email="kevin.kraus@studium.uni-hamburg.de" },
]
description = "Adaptation of the llama-recipes repository for my master-thesis. The repositories backbone stays the same, even tough it was enhanced and new requirements where implemented"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
vllm = ["vllm"]
tests = ["pytest-mock"]
auditnlg = ["auditnlg"]

[project.urls]
"Homepage" = "https://github.com/facebookresearch/llama-recipes/"
"Bug Tracker" = "https://github.com/facebookresearch/llama-recipes/issues"

[tool.hatch.build]
exclude = [
  "dist/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
